--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -63,6 +63,7 @@
 	<string name="searching_format">Searching for contact with invitation code %06d\u2026</string>
 	<string name="connection_failed">Connection failed</string>
 	<string name="could_not_find_contact">Briar could not find your contact nearby</string>
+	<string name="could_not_open_camera">Could not access your camera. Please try again!</string>
 	<string name="try_again_button">Try Again</string>
 	<string name="connected_to_contact">Connected to contact</string>
 	<string name="calculating_confirmation_code">Calculating confirmation code\u2026</string>
